PMD Avoid new Long(x) use Long.ValueOf(x).